2008-04-16  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Track API change.
	  Remove char code translation hack.
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Break up overly long
	  line.

2008-04-16  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Removed work
	  around.

2008-04-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorDisplayBinding.cs: Handle mime
	  types with xml subtype.

2008-04-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: Track API.

2008-04-11  Michael Hutchinson <mhutchinson@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	  Use a fontbutton instead of a fontselection. Makes UI more compact
	  and gets rid of a failed GTK critical assert.
	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SearchWidget.cs,
	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Fix the pop up menu
	  position relative to the button rather than the mouse pointer.
	* gtk-gui/gui.stetic, MonoDevelop.SourceEditor.mdp: Updated.

2008-04-10  Michael Hutchinson <mhutchinson@novell.com> 

	* gtk-gui/gui.stetic: Set GTK version to 2.8.3.
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Catch and log errors
	  in worker thread to avoid crashing whole app.
	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: Make tooltips
	  semi-transparent when Ctrl key is held down.

2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Added missing null
	  check.
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Track api changes.
